# ticker-commentator

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  design.md  plan.md  pyproject.toml  setup.sh
commentator/: analysis.py  commentary.py  data.py  llama_lock.py  tts.py
experiments/: bench_snac.py  check_snac_wav.py  orpheus-cpp.py  orpheus-podman-test.py  test_tts.py
tests/: test_analysis.py  test_commentary.py  test_data.py  test_tts.py
